cleanup and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-#.ipynb_checkpoints/
-#__pycache__/
-#.idea
+.ipynb_checkpoints/
+__pycache__/
+.idea
+.DS_Store
 _generated_samples/
 _train_samples/
 logs/
@@ -13,3 +14,4 @@ tests/logs/
 !/generated_samples/chaconne_temp_0,8.mp3
 !/generated_samples/chaconne_temp_0,5.mp3
 !/snapshots/chaconne_model_2017-12-28_16-44-12
+
